force-app/main/default/objects/Mission_Assignment__c/Mission_Assignment__c.object-meta.xml
<CustomObject>
    <label>Mission Assigment</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mission Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>