force-app/main/default/objects/Mission_Assignment__c/fields/Hero__c.field-meta.xml
<CustomField>
    <fullName>Hero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hero</label>
    <referenceTo>Hero__c</referenceTo>
    <relationshipLabel>Mission Assignments</relationshipLabel>
    <relationshipName>Mission_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>