force-app/main/default/objects/Mission_Assignment__c/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission</label>
    <referenceTo>Superhero_Mission__c</referenceTo>
    <relationshipLabel>Mission Assignments</relationshipLabel>
    <relationshipName>Mission_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>